<resources>
    <string name="app_name">MyApps Story</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Want to share your daily story?  Or share your experience through the picture?  Just register on Your Stories!</string>
    <string name="title_welcome_page">Welcome to Your Stories!</string>
    <string name="title_signup_page">Sign up to see photos from other user!.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Login to see other user stories!</string>
    <string name="title_login_page">Are you ready to share your stories?</string>
    <string name="name">Name</string>
    <string name="copyright">© 2022 YourStories</string>
    <string name="logout">Logout</string>

    <string name="invalid_email">The email is not valid!</string>
    <string name="invalid_password">Password must at least 8 or more</string>
    <string name="invalid_name">Please fill in your name.</string>
    <string name="timeCreate">createdAt</string>
    <string name="gallery">Gallery</string>
    <string name="upload">UPLOAD</string>
    <string name="description">description</string>
    <string name="waktu_post">time</string>
    <string name="appwidget_text">STORIES</string>
    <string name="title_alert_dialog">Yeah!</string>
    <string name="message_alert_dialog">The account is ready. Login and share your story!</string>
    <string name="message_positive_button">Next</string>
    <string name="failure_message_api">Failed to instance Retrofit</string>
    <string name="message_alert_dialog_login">Login succeed!</string>
    <string name="title_intent_galery">Choose a Picture</string>
    <string name="message_alert_dialog_addstory">Upload succeed</string>
    <string name="message_null_picture">Please pick a picture first.</string>
    <string name="message_null_permission">Didn\'t get permission</string>
    <string name="message_failure_camera">Camera error.</string>
    <string name="message_error_take_picture">Take a picture has failed.</string>
    <string name="title_detail_story">Posts</string>
    <string name="title_list_stories">Explore</string>
    <string name="settings">Settings</string>
    <string name="retry">retry</string>
    <string name="home_page">YourStories</string>
    <string name="detail_page">Posts</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="failed_style_maps">Style parsing failed.</string>
    <string name="failed_find_style">\"Can\'t find style. Error: \"</string>
    <string name="failed_map_loc">Failed. Cause : %1$s</string>
    <string name="title_maps">Maps</string>
    <string name="aunth_failed">Something went wrong!, please check your email/password again</string>
    <string name="failed_upload">Please add some description or check your connection!</string>
    <string name="signup_failed">Fail!, please check your email/password again or email already been taken</string>
    <string name="welcome_messages">Hi %1$s!</string>
    <string name="welcome_main_page">Welcome !</string>
    <string name="welcome_messages_main_page">Ready to share your stories ?</string>
    <string name="title_tab_main">List Stories</string>
    <string name="tv_detail">Detail Post</string>
    <string name="tv_Story">Add Stories</string>
    <string name="bt_camera">Camera</string>
    <string name="empty_media_message">No media selected</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">There is nothing to see</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="switch_location">Add Location</string>
    <string name="not_found_location">Location is not found. Try Again</string>
    <string name="message_permission">You must have GPS enabled to use this app!</string>
</resources>