...
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/camera_animation" />

    <TextView
        android:id="@+id/textView_welcome_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/coiny"
        android:text="@string/welcome_main_page"
...
        app:layout_constraintEnd_toEndOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5"
        app:srcCompat="@drawable/ic_add"
        tools:ignore="ContentDescription" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:clickable="true"
        android:focusable="true"
        android:backgroundTint="@color/md_theme_light_error"
...
